Avoid leaking pages. Fixes PR 42053 from SHIMIZU Ryo.